doc: Update documentation in E2E and Integration tests