@@ -4,26 +4,26 @@
 
 Se implementaron **84 pruebas automatizadas** distribuidas en tres niveles:
 
-### 🧩 Pruebas Unitarias (49 tests)
-- **user-service**: 19 pruebas ✅
-- **product-service**: 6 pruebas ✅
-- **order-service**: 6 pruebas ✅
-- **payment-service**: 6 pruebas ✅
-- **favourite-service**: 6 pruebas ✅
-- **shipping-service**: 6 pruebas ✅
+### Pruebas Unitarias (49 tests)
+- **user-service**: 19 pruebas
+- **product-service**: 6 pruebas
+- **order-service**: 6 pruebas
+- **payment-service**: 6 pruebas
+- **favourite-service**: 6 pruebas
+- **shipping-service**: 6 pruebas
 
-### 🔗 Pruebas de Integración (30 tests)
-- **user-service**: 5 pruebas ✅
-- **order-service**: 5 pruebas ✅
-- **product-service**: 5 pruebas ✅
-- **payment-service**: 5 pruebas ✅
-- **favourite-service**: 5 pruebas ✅
-- **shipping-service**: 5 pruebas ✅
+### Pruebas de Integración (30 tests)
+- **user-service**: 5 pruebas
+- **order-service**: 5 pruebas
+- **product-service**: 5 pruebas
+- **payment-service**: 5 pruebas
+- **favourite-service**: 5 pruebas
+- **shipping-service**: 5 pruebas
 
-### 🌐 Pruebas E2E (5 tests)
-- **e2e-tests**: 5 pruebas ✅
+### Pruebas E2E (5 tests)
+- **e2e-tests**: 5 pruebas
 
-**Total: 84/84 pruebas pasando (100% éxito)** 🎉
+**Total: 84/84 pruebas pasando (100% éxito)**
 
 ---
 
@@ -53,10 +53,10 @@ eureka.client.enabled=false
 ```
 
 **Key Features:**
-- ✅ H2 database se crea y destruye para cada test suite
-- ✅ Eureka Registry deshabilitado para evitar conexiones de red
-- ✅ Service Registry auto-registration deshabilitado
-- ✅ Schema DDL `create-drop` asegura limpieza entre test suites
+- H2 database se crea y destruye para cada test suite
+- Eureka Registry deshabilitado para evitar conexiones de red
+- Service Registry auto-registration deshabilitado
+- Schema DDL `create-drop` asegura limpieza entre test suites
 
 ---
 
@@ -70,7 +70,7 @@ Objetivo: Crear usuario y verificar persistencia en BD
 Patrón: Create → Save → Retrieve → Assert
 Valida: User creation, ID generation, field mapping
 
-✅ PASSING
+PASSING
 ```
 
 **Pasos:**
@@ -86,7 +86,7 @@ Objetivo: Validar relación One-to-One persistida correctamente
 Patrón: Create User + Credential → Bidirectional Link → Cascade Save
 Valida: OneToOne mapping, credential access, cascade persist
 
-✅ PASSING
+PASSING
 ```
 
 **Pasos:**
@@ -104,7 +104,7 @@ Objetivo: Validar relación One-to-Many sin lazy loading issues
 Patrón: Create User + Multiple Addresses → Query both sides
 Valida: Address persistence, bidirectional reference, count
 
-✅ PASSING (Fixed from earlier lazy loading issue)
+PASSING (Fixed from earlier lazy loading issue)
 ```
 
 **Pasos:**
@@ -122,7 +122,7 @@ Objetivo: Validar actualización de campos de usuario con transacción atómica
 Patrón: Create → Retrieve → Modify → Save → Verify
 Valida: Update persistence, transaction boundaries
 
-✅ PASSING
+PASSING
 ```
 
 **Pasos:**
@@ -140,7 +140,7 @@ Objetivo: Validar que eliminar usuario elimina entidades relacionadas
 Patrón: Create User + Address + Credential → Delete User → Verify Cascade
 Valida: CascadeType.ALL working, referential integrity
 
-✅ PASSING
+PASSING
 ```
 
 **Pasos:**
@@ -162,7 +162,7 @@ Objetivo: Crear producto y verificar persistencia
 Patrón: Create → Save → Retrieve → Assert
 Valida: Product creation, ID generation, field mapping
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 2: Retrieve Product by ID
@@ -171,7 +171,7 @@ Objetivo: Recuperar producto por ID con datos completos
 Patrón: Create → Save → Retrieve by ID → Assert all fields
 Valida: Data retrieval, field mapping accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 3: Update Product Information
@@ -180,7 +180,7 @@ Objetivo: Actualizar información de producto atómicamente
 Patrón: Create → Save → Modify → Save → Verify
 Valida: Update persistence, transactional integrity
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 4: Retrieve All Products with Count
@@ -189,7 +189,7 @@ Objetivo: Recuperar todos los productos y verificar conteo
 Patrón: Create 2 Products → Query count → Assert equals 2
 Valida: Repository.count() accuracy, collection operations
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 5: Product with Category Relationship
@@ -198,7 +198,7 @@ Objetivo: Validar relación Many-to-One con Category
 Patrón: Create Category → Create Product → Link → Save
 Valida: Entity relationship, foreign key mapping
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -213,7 +213,7 @@ Objetivo: Crear pago y verificar persistencia
 Patrón: Create → Save → Retrieve → Assert
 Valida: Payment creation, ID generation, field mapping
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 2: Retrieve Payment by ID
@@ -222,7 +222,7 @@ Objetivo: Recuperar pago por ID con datos completos
 Patrón: Create → Save → Retrieve by ID → Assert all fields
 Valida: Data retrieval, field mapping accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 3: Update Payment Status
@@ -231,7 +231,7 @@ Objetivo: Actualizar estado de pago atómicamente
 Patrón: Create → Save → Modify → Save → Verify
 Valida: Update persistence, enum handling
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 4: Retrieve All Payments with Count
@@ -240,7 +240,7 @@ Objetivo: Recuperar todos los pagos y verificar conteo
 Patrón: Create 3 Payments → Query count → Assert equals 3
 Valida: Repository.count() accuracy, collection operations
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 5: Delete Payment and Verify Cleanup
@@ -249,7 +249,7 @@ Objetivo: Eliminar pago y verificar limpieza de BD
 Patrón: Create 2 Payments → Delete 1 → Verify remaining
 Valida: Delete operation, count accuracy, data isolation
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -264,7 +264,7 @@ Objetivo: Crear favorito con clave compuesta
 Patrón: Create → Save → Retrieve → Assert
 Valida: Composite key handling, FavouriteId mapping
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 2: Retrieve Favourite by Composite ID
@@ -273,7 +273,7 @@ Objetivo: Recuperar favorito por ID compuesto
 Patrón: Create → Save → Retrieve by composite ID → Assert
 Valida: Composite key retrieval, data accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 3: Update Favourite Like Date
@@ -282,7 +282,7 @@ Objetivo: Actualizar fecha de like atómicamente
 Patrón: Create → Save → Modify → Save → Verify
 Valida: Update persistence, LocalDateTime handling
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 4: Retrieve All Favourites with Count
@@ -291,7 +291,7 @@ Objetivo: Recuperar todos los favoritos y verificar conteo
 Patrón: Create 3 Favourites → Query count → Assert equals 3
 Valida: Repository.count() accuracy, collection operations
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 5: Delete Favourite with Composite Key
@@ -300,7 +300,7 @@ Objetivo: Eliminar favorito con clave compuesta
 Patrón: Create 2 Favourites → Delete 1 → Verify remaining
 Valida: Composite key deletion, count accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -315,7 +315,7 @@ Objetivo: Crear item de orden con clave compuesta
 Patrón: Create → Save → Retrieve → Assert
 Valida: Composite key handling, OrderItemId mapping
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 2: Retrieve OrderItem by Composite ID
@@ -324,7 +324,7 @@ Objetivo: Recuperar item de orden por ID compuesto
 Patrón: Create → Save → Retrieve by composite ID → Assert
 Valida: Composite key retrieval, data accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 3: Update OrderItem Quantity
@@ -333,7 +333,7 @@ Objetivo: Actualizar cantidad de item atómicamente
 Patrón: Create → Save → Modify → Save → Verify
 Valida: Update persistence, quantity handling
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 4: Retrieve All OrderItems with Count
@@ -342,7 +342,7 @@ Objetivo: Recuperar todos los items y verificar conteo
 Patrón: Create 3 OrderItems → Query count → Assert equals 3
 Valida: Repository.count() accuracy, collection operations
 
-✅ PASSING
+PASSING
 ```
 
 ### Test 5: Delete OrderItem with Composite Key
@@ -351,7 +351,7 @@ Objetivo: Eliminar item de orden con clave compuesta
 Patrón: Create 2 OrderItems → Delete 1 → Verify remaining
 Valida: Composite key deletion, count accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -366,7 +366,7 @@ Objetivo: Crear orden y verificar persistencia
 Patrón: Create → Save → Retrieve → Assert
 Valida: Order creation, ID generation, field mapping
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -377,7 +377,7 @@ Objetivo: Recuperar orden por ID con datos completos
 Patrón: Create → Save → Retrieve by ID → Assert all fields
 Valida: Data retrieval, field mapping accuracy
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -388,7 +388,7 @@ Objetivo: Actualizar descripción de orden atómicamente
 Patrón: Create → Save → Modify → Save → Verify
 Valida: Update persistence, transactional integrity
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -399,7 +399,7 @@ Objetivo: Recuperar todas las órdenes y verificar conteo
 Patrón: Create 2 Orders → Query count → Assert equals 2
 Valida: Repository.count() accuracy, collection operations
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -410,7 +410,7 @@ Objetivo: Eliminar orden y verificar limpieza de BD
 Patrón: Create 2 Orders → Delete 1 → Verify remaining
 Valida: Delete operation, count accuracy, data isolation
 
-✅ PASSING
+PASSING
 ```
 
 ---
@@ -437,7 +437,7 @@ Failures: 0
 Errors: 0
 Skipped: 0
 Time elapsed: 8.72 s
-BUILD SUCCESS ✅
+BUILD SUCCESS
 ```
 
 ### Order Service Tests
@@ -447,15 +447,15 @@ Failures: 0
 Errors: 0
 Skipped: 0
 Time elapsed: 10.38 s
-BUILD SUCCESS ✅
+BUILD SUCCESS
 ```
 
 ### Total
 ```
-Unit Tests: 49/49 ✅ (100%)
-Integration Tests: 30/30 ✅ (100%)
-E2E Tests: 5/5 ✅ (100%)
-TOTAL TESTS: 84/84 ✅ (100% - ALL PASSING)
+Unit Tests: 49/49 (100%)
+Integration Tests: 30/30 (100%)
+E2E Tests: 5/5 (100%)
+TOTAL TESTS: 84/84 (100% - ALL PASSING)
 ```
 
 ---
@@ -486,11 +486,11 @@ class OrderServiceIntegrationTest {
 ```
 
 **Ventajas:**
-- ✅ No requiere Service layer mocking
-- ✅ Prueba persistencia real sin complejidad de mapeos
-- ✅ Transacciones atómicas con rollback automático
-- ✅ H2 database mantiene estado aislado por test
-- ✅ Más robusto que mocking para integración
+- No requiere Service layer mocking
+- Prueba persistencia real sin complejidad de mapeos
+- Transacciones atómicas con rollback automático
+- H2 database mantiene estado aislado por test
+- Más robusto que mocking para integración
 
 ### 2. Transactional Test Isolation
 ```java
@@ -498,10 +498,10 @@ class OrderServiceIntegrationTest {
 ```
 
 **Beneficios:**
-- ✅ Cada test comienza con BD limpia
-- ✅ Sin necesidad de manual cleanup
-- ✅ Evita conflictos entre tests paralelos
-- ✅ Simula transacciones reales
+- Cada test comienza con BD limpia
+- Sin necesidad de manual cleanup
+- Evita conflictos entre tests paralelos
+- Simula transacciones reales
 
 ### 3. AAA Pattern
 ```java
@@ -527,19 +527,19 @@ void testCreateUser() {
 **Síntoma**: `userService.save()` retornaba null en @SpringBootTest
 **Causa**: UserMappingHelper complexity en contexto de test
 **Solución**: Switched to repository layer (direct entities)
-**Resultado**: ✅ Resuelto
+**Resultado**: Resuelto
 
 ### Issue 2: Lazy Loading in OneToMany
 **Síntoma**: `user.getAddresses()` retornaba null
 **Causa**: OneToMany lazy loading no se ejecutaba
 **Solución**: Query address side directamente desde repository
-**Resultado**: ✅ Resuelto
+**Resultado**: Resuelto
 
 ### Issue 3: Test Data Pollution
 **Síntoma**: Tests 4 y 5 de order-service fallan con count != esperado
 **Causa**: Sin cleanup entre tests
 **Solución**: Agregar `@BeforeEach` con `deleteAll()`
-**Resultado**: ✅ Resuelto
+**Resultado**: Resuelto
 
 ---
 
@@ -591,26 +591,535 @@ shipping-service/
 
 ---
 
+## Ejecución Local de Pruebas de Integración
+
+### **Prerrequisitos**
+- **Java 11+** instalado y configurado
+- **Maven 3.6+** o usar el wrapper incluido (`./mvnw`)
+- **Git** para clonar el repositorio
+- **Puerto libre** para cada servicio (cada uno usa puerto aleatorio)
+
+### **Configuración del Entorno Local**
+
+#### **1. Clonar el Repositorio**
+```bash
+git clone https://github.com/OscarMURA/ecommerce-microservice-backend-app.git
+cd ecommerce-microservice-backend-app
+```
+
+#### **2. Verificar Estructura del Proyecto**
+```bash
+# Verificar que los servicios con pruebas de integración existen
+ls -la */src/test/java/com/selimhorri/app/integration/
+
+# Verificar configuración Maven de un servicio
+cat user-service/pom.xml | grep -A 5 -B 5 "artifactId"
+```
+
+#### **3. Configurar Variables de Entorno (Opcional)**
+```bash
+# Para debugging avanzado
+export SPRING_PROFILES_ACTIVE=test
+export LOGGING_LEVEL_COM_SELIMHORRI_APP=DEBUG
+
+# Para timeout personalizado
+export TEST_INTEGRATION_TIMEOUT=30000
+```
+
+### **Ejecución de Pruebas de Integración**
+
+#### **Opción 1: Ejecutar Todas las Pruebas de Integración**
+```bash
+# Desde la raíz del proyecto - solo servicios con pruebas
+./mvnw clean test -pl user-service,product-service,order-service,payment-service,favourite-service,shipping-service -Dtest=*IntegrationTest -DfailIfNoTests=false
+
+# O ejecutar cada servicio individualmente
+for service in user-service product-service order-service payment-service favourite-service shipping-service; do
+  echo "Ejecutando pruebas de integración para $service"
+  ./mvnw -pl $service clean test -Dtest=*IntegrationTest -q
+done
+```
+
+#### **Opción 2: Ejecutar Pruebas de un Servicio Específico**
+```bash
+# Ejecutar solo user-service
+cd user-service
+./mvnw clean test -Dtest=*IntegrationTest
+
+# Ejecutar solo product-service
+cd product-service
+./mvnw clean test -Dtest=*IntegrationTest
+
+# Ejecutar solo order-service
+cd order-service
+./mvnw clean test -Dtest=*IntegrationTest
+```
+
+#### **Opción 3: Ejecutar Prueba Específica**
+```bash
+# Ejecutar solo el test de creación de usuario
+./mvnw test -Dtest=UserServiceIntegrationTest#testCreateUserIntegration
+
+# Ejecutar solo el test de relación OneToOne
+./mvnw test -Dtest=UserServiceIntegrationTest#testUserWithCredentialIntegration
+```
+
+#### **Opción 4: Ejecutar con Configuración Específica**
+```bash
+# Con logging detallado
+./mvnw test -Dtest=*IntegrationTest -Dlogging.level.com.selimhorri.app=DEBUG
+
+# Con timeout personalizado
+./mvnw test -Dtest=*IntegrationTest -Dtest.integration.timeout=60000
+
+# Con reportes HTML
+./mvnw test -Dtest=*IntegrationTest -Dsurefire.reportFormat=html
+```
+
+### **Verificación de Resultados**
+
+#### **1. Verificar Ejecución Exitosa**
+```bash
+# Buscar mensaje de éxito en logs
+grep -i "BUILD SUCCESS" */target/surefire-reports/*.txt
+
+# Ver resumen de pruebas por servicio
+for service in user-service product-service order-service payment-service favourite-service shipping-service; do
+  echo "=== $service ==="
+  grep "Tests run:" $service/target/surefire-reports/*.txt 2>/dev/null || echo "Sin reportes"
+done
+```
+
+#### **2. Revisar Reportes Generados**
+```bash
+# Listar archivos de reporte por servicio
+for service in user-service product-service order-service payment-service favourite-service shipping-service; do
+  echo "=== $service ==="
+  ls -la $service/target/surefire-reports/ 2>/dev/null || echo "Sin reportes"
+done
+
+# Ver reporte XML detallado de un servicio
+cat user-service/target/surefire-reports/TEST-*IntegrationTest.xml
+```
+
+#### **3. Debugging de Fallos**
+```bash
+# Ver logs detallados de un servicio específico
+tail -f user-service/target/surefire-reports/*.txt
+
+# Verificar configuración de base de datos H2
+grep -i "h2" user-service/target/surefire-reports/*.txt
+```
+
+### **Comandos de Utilidad**
+
+#### **Limpiar y Reconstruir**
+```bash
+# Limpiar artefactos anteriores
+./mvnw clean
+
+# Compilar sin ejecutar tests
+./mvnw compile -DskipTests
+
+# Ejecutar solo compilación de servicios con pruebas
+./mvnw -pl user-service,product-service,order-service,payment-service,favourite-service,shipping-service compile
+```
+
+#### **Verificar Dependencias**
+```bash
+# Ver dependencias de un servicio específico
+./mvnw -pl user-service dependency:tree
+
+# Verificar que H2 está disponible
+./mvnw -pl user-service dependency:resolve | grep h2
+```
+
+---
+
+## Pipeline de CI/CD
+
+### **GitHub Actions Workflow**
+**Archivo**: `.github/workflows/integration-test.yml`
+
+#### **Configuración del Workflow**
+```yaml
+# Triggers del workflow
+on:
+  push:
+    branches: [dev, develop, 'feat/**', 'test/**']
+  pull_request:
+    branches: [dev, develop, 'feat/**', 'test/**']
+```
+
+#### **Jobs del Pipeline**
+1. **integration-test-matrix**: Ejecuta las pruebas de integración en paralelo por servicio
+2. **integration-test-summary**: Genera resumen y comentarios
+
+#### **Flujo Detallado**
+1. **Checkout**: Descarga el código del repositorio
+2. **Setup JDK 11**: Configura Java 11 con Temurin
+3. **Cache Maven**: Cachea dependencias Maven para velocidad
+4. **Run Integration Tests**: Ejecuta pruebas por servicio en paralelo
+5. **Upload Results**: Sube artefactos de resultados por servicio
+6. **Publish Results**: Publica resultados en GitHub
+7. **Generate Summary**: Crea resumen y comenta en PR
+
+#### **Configuración de Entorno**
+```yaml
+# Configuración del job principal con matriz
+jobs:
+  integration-test-matrix:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [user-service, order-service, product-service, payment-service, favourite-service, shipping-service]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+```
+
+#### **Artefactos Generados**
+- **Test Reports**: `{service}/target/surefire-reports/` por cada servicio
+- **Test Summary**: Reporte markdown con resultados consolidados
+- **PR Comments**: Comentarios automáticos en Pull Requests
+
+### **Jenkins Pipeline**
+**Archivo**: `jenkins/Jenkins_Dev.groovy`
+
+#### **Configuración del Pipeline**
+```groovy
+pipeline {
+  agent any
+  options { timestamps(); disableConcurrentBuilds() }
+  
+  parameters {
+    string(name: 'VM_NAME', defaultValue: 'ecommerce-integration-runner')
+    string(name: 'VM_REGION', defaultValue: 'nyc3')
+    // ... más parámetros
+  }
+}
+```
+
+#### **Stages del Pipeline Jenkins**
+1. **Validate Branch**: Valida que la rama sea `develop` o `feat/**`
+2. **Checkout Pipeline Repo**: Descarga el código del pipeline
+3. **Ensure VM Available**: Verifica/crea VM en DigitalOcean
+4. **Sync Repository on VM**: Sincroniza código en la VM
+5. **Unit Tests**: Ejecuta pruebas unitarias
+6. **Integration Tests**: Ejecuta pruebas de integración
+7. **E2E Tests**: Ejecuta pruebas E2E
+8. **Recolectar Reportes**: Recopila todos los reportes
+9. **Build and Push Docker Images**: Construye imágenes Docker (opcional)
+10. **Deploy to Kubernetes**: Despliega en K8s (opcional)
+
+#### **Ejecución de Integration Tests en Jenkins**
+```bash
+# Comando ejecutado en la VM remota
+cd "$REMOTE_DIR"
+for svc in $UNIT_SERVICES; do
+  echo "Ejecutando pruebas de integración para $svc"
+  ./mvnw -B -pl "$svc" test -Dtest='*IntegrationTest' -DfailIfNoTests=false
+  summarize_reports "$svc"
+done
+```
+
+#### **Configuración de VM**
+- **Proveedor**: DigitalOcean
+- **Imagen**: Ubuntu 22.04 LTS
+- **Tamaño**: s-1vcpu-2gb (configurable)
+- **Región**: nyc3 (configurable)
+- **Acceso**: SSH con credenciales almacenadas en Jenkins
+
+#### **Parámetros Configurables**
+- `VM_NAME`: Nombre de la VM a usar/crear
+- `VM_REGION`: Región de DigitalOcean
+- `VM_SIZE`: Tamaño de la VM
+- `REPO_URL`: URL del repositorio a clonar
+- `APP_BRANCH`: Rama específica a usar
+- `DEPLOY_TO_K8S`: Desplegar en Kubernetes
+- `K8S_ENVIRONMENT`: Ambiente (dev/staging/prod)
+
+#### **Credenciales Requeridas en Jenkins**
+- `digitalocean-token`: Token de API de DigitalOcean
+- `integration-vm-password`: Contraseña de la VM
+- `gcp-service-account`: Credenciales de GCP (para K8s)
+- `github-token`: Token de GitHub
+
+#### **Monitoreo y Reportes**
+```bash
+# Función de resumen de reportes
+summarize_reports() {
+  local module="$1"
+  local report_dir="$module/target/surefire-reports"
+  # Extrae estadísticas de XML y TXT
+  echo "${module} -> ${summary}"
+}
+```
+
+#### **Artefactos de Jenkins**
+- **Test Reports**: Archivo tar.gz con todos los reportes
+- **Docker Images**: Imágenes construidas y subidas a GCR
+- **K8s Manifests**: Archivos de despliegue de Kubernetes
+
+---
+
+## Troubleshooting y Problemas Comunes
+
+### **Problemas de Ejecución Local**
+
+#### **1. Error: Base de Datos H2 No Disponible**
+```bash
+# Síntoma
+java.sql.SQLException: Database "mem:testdb" not found
+
+# Solución
+# Verificar dependencias
+./mvnw -pl user-service dependency:tree | grep h2
+# Limpiar y reconstruir
+./mvnw clean compile
+```
+
+#### **2. Error: Transacciones No Funcionan**
+```bash
+# Síntoma
+@Transactional no hace rollback automático
+
+# Solución
+# Verificar que el test extiende de clase con @SpringBootTest
+# Verificar que tiene @Transactional en el método o clase
+# Verificar configuración de JPA
+```
+
+#### **3. Error: Lazy Loading en OneToMany**
+```bash
+# Síntoma
+user.getAddresses() retorna null
+
+# Solución
+# Query address side directamente desde repository
+# O usar @Transactional en el test
+# O configurar fetch = FetchType.EAGER
+```
+
+#### **4. Error: Test Data Pollution**
+```bash
+# Síntoma
+Tests fallan con count != esperado
+
+# Solución
+# Agregar @BeforeEach con deleteAll()
+# Verificar que cada test limpia sus datos
+# Usar @Transactional para rollback automático
+```
+
+### **Problemas de Jenkins**
+
+#### **1. VM No Disponible**
+```bash
+# Síntoma
+No se encontró la VM ecommerce-integration-runner
+
+# Solución
+# Verificar credenciales de DigitalOcean
+# Revisar parámetro VM_NAME
+# Ejecutar Jenkins_Create_VM manualmente
+```
+
+#### **2. Error de SSH a VM**
+```bash
+# Síntoma
+Permission denied (publickey,password)
+
+# Solución
+# Verificar credencial 'integration-vm-password'
+# Verificar que la VM esté corriendo
+# Revisar configuración de red
+```
+
+#### **3. Tests Fallan en VM**
+```bash
+# Síntoma
+Tests run: 5, Failures: 1, Errors: 0
+
+# Solución
+# Revisar logs en la VM
+# Verificar que todos los servicios estén disponibles
+# Revisar configuración de red entre servicios
+```
+
+### **Problemas de GitHub Actions**
+
+#### **1. Workflow No Se Ejecuta**
+```bash
+# Síntoma
+Workflow no aparece en la pestaña Actions
+
+# Solución
+# Verificar que el archivo esté en .github/workflows/
+# Verificar sintaxis YAML
+# Verificar triggers (branches)
+```
+
+#### **2. Error de Permisos**
+```bash
+# Síntoma
+Permission denied to create comment
+
+# Solución
+# Verificar token de GitHub
+# Revisar permisos del repositorio
+# Verificar configuración de secrets
+```
+
+#### **3. Tests Fallan en Actions**
+```bash
+# Síntoma
+BUILD FAILURE en GitHub Actions
+
+# Solución
+# Revisar logs en la pestaña Actions
+# Verificar que Java 11 esté configurado
+# Revisar dependencias Maven
+```
+
+### **Debugging Avanzado**
+
+#### **1. Habilitar Logging Detallado**
+```bash
+# Configurar logging en application.properties
+logging.level.com.selimhorri.app=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+```
+
+#### **2. Verificar Configuración de Base de Datos**
+```bash
+# Verificar configuración H2
+grep -i "h2" */src/test/resources/application.properties
+
+# Verificar dialecto
+grep -i "dialect" */src/test/resources/application.properties
+```
+
+#### **3. Monitorear Base de Datos H2**
+```bash
+# Acceder a consola H2 durante tests
+# URL: http://localhost:{port}/h2-console
+# JDBC URL: jdbc:h2:mem:testdb
+# Usuario: sa
+# Contraseña: (vacía)
+```
+
+#### **4. Verificar Dependencias**
+```bash
+# Ver árbol de dependencias
+./mvnw -pl user-service dependency:tree
+
+# Verificar conflictos
+./mvnw -pl user-service dependency:analyze
+
+# Resolver dependencias
+./mvnw -pl user-service dependency:resolve
+```
+
+### **Comandos de Diagnóstico**
+
+#### **Verificar Estado del Proyecto**
+```bash
+# Verificar estructura
+find . -name "*IntegrationTest.java" -type f
+
+# Verificar configuración
+cat user-service/pom.xml | grep -A 10 -B 5 "artifactId"
+
+# Verificar recursos
+ls -la user-service/src/test/resources/
+```
+
+#### **Verificar Ejecución**
+```bash
+# Ejecutar con verbose
+./mvnw test -X -Dtest=*IntegrationTest
+
+# Ejecutar solo compilación
+./mvnw compile -pl user-service
+
+# Verificar tests disponibles
+./mvnw test -Dtest=*IntegrationTest -DdryRun=true
+```
+
+#### **Limpiar y Reconstruir**
+```bash
+# Limpieza completa
+./mvnw clean
+rm -rf */target/
+./mvnw compile -pl user-service,product-service,order-service,payment-service,favourite-service,shipping-service
+
+# Reconstruir desde cero
+./mvnw clean install -DskipTests
+./mvnw test -pl user-service,product-service,order-service,payment-service,favourite-service,shipping-service
+```
+
+### **Configuración de Entorno**
+
+#### **Variables de Entorno Recomendadas**
+```bash
+# Para desarrollo local
+export SPRING_PROFILES_ACTIVE=test
+export LOGGING_LEVEL_COM_SELIMHORRI_APP=DEBUG
+export TEST_INTEGRATION_TIMEOUT=30000
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=256m"
+
+# Para Jenkins
+export JAVA_HOME=/usr/lib/jvm/java-11-openjdk
+export MAVEN_HOME=/opt/maven
+export PATH=$JAVA_HOME/bin:$MAVEN_HOME/bin:$PATH
+```
+
+#### **Configuración de Maven**
+```xml
+<!-- En settings.xml -->
+<settings>
+  <profiles>
+    <profile>
+      <id>integration-test</id>
+      <properties>
+        <maven.test.failure.ignore>false</maven.test.failure.ignore>
+        <surefire.reportFormat>html</surefire.reportFormat>
+      </properties>
+    </profile>
+  </profiles>
+</settings>
+```
+
+---
+
 ## Recomendaciones Futuras
 
-### 1. Extensión a Otros Servicios ✅ **COMPLETADO**
+### 1. Extensión a Otros Servicios **COMPLETADO**
 Se implementaron tests para todos los microservicios principales:
-- `user-service` ✅ (5 tests)
-- `order-service` ✅ (5 tests)
-- `product-service` ✅ (5 tests)
-- `payment-service` ✅ (5 tests)
-- `favourite-service` ✅ (5 tests)
-- `shipping-service` ✅ (5 tests)
+- `user-service` (5 tests)
+- `order-service` (5 tests)
+- `product-service` (5 tests)
+- `payment-service` (5 tests)
+- `favourite-service` (5 tests)
+- `shipping-service` (5 tests)
 
 **Total implementado**: 30 tests de integración
 
-### 2. End-to-End (E2E) Tests ✅ **COMPLETADO**
+### 2. End-to-End (E2E) Tests **COMPLETADO**
 Se implementaron 5 pruebas E2E con @SpringBootTest y `webEnvironment = RANDOM_PORT`:
-- ✅ Complete User Registration and Profile Setup
-- ✅ Product Catalog Browsing and Category Management
-- ✅ Complete Order Creation and Management Flow
-- ✅ Favorites Management and User Preferences
-- ✅ Complete E-commerce Transaction Flow
+- Complete User Registration and Profile Setup
+- Product Catalog Browsing and Category Management
+- Complete Order Creation and Management Flow
+- Favorites Management and User Preferences
+- Complete E-commerce Transaction Flow
 
 **Características implementadas:**
 - REST endpoint validation con TestRestTemplate
@@ -641,7 +1150,7 @@ Usar Pact para inter-service communication validation:
 
 ## Conclusión
 
-✅ **Se completaron exitosamente 30 pruebas de integración** que validan:
+**Se completaron exitosamente 30 pruebas de integración** que validan:
 - Persistencia de datos en BD H2 real
 - Relaciones OneToOne y OneToMany
 - Operaciones CRUD completas
@@ -651,12 +1160,12 @@ Usar Pact para inter-service communication validation:
 - Enum handling (PaymentStatus)
 - Entity relationships (Product-Category)
 
-✅ **Calidad total del proyecto**: 84/84 tests pasando (100%)
-- 49 Unit Tests ✅
-- 30 Integration Tests ✅
-- 5 E2E Tests ✅
+**Calidad total del proyecto**: 84/84 tests pasando (100%)
+- 49 Unit Tests
+- 30 Integration Tests
+- 5 E2E Tests
 
-✅ **Patrón establecido** para escalar a otros microservicios
+**Patrón establecido** para escalar a otros microservicios
 
 ---
 
